--- a/wod.css
+++ b/wod.css
@@ -2,6 +2,30 @@
   display: none;
 }
 
+.inactive {
+  cursor: not-allowed;
+}
+
+#overlay {
+  background-color: rgba(0, 0, 0, 0.6); 
+  width: 100%;
+  height: 100%; 
+  z-index: 10;
+  top: 0; 
+  left: 0; 
+  position: fixed; 
+}
+
+#credits, #timeup-screen {
+  background-color: white;
+  position: fixed;
+  width: 60%;
+  left: 50%;
+  margin-left: -30%;
+  padding: 10px;
+  z-index: 20;
+}
+
 /* timing out on text area  - temp colours */
 
 .warning-none {
